[package]
name = "webhooks"
version = "0.1.0"
edition = "2021"

[dependencies]
ab_glyph = "0.2.29"
glyph_brush = "0.7.10"
image = "0.25.2"
imageproc = "0.25.0"
rand = "0.8.5"
reqwest = {version = "0.12.8", features = ["json", "multipart"]}
serde_json = "1.0.128"
tokio = { version = "*", features = ["full"] }
